--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+a, a:hover {
+  color: inherit;
+  text-decoration: none;
+  cursor:pointer;  
+}
+
 .App {
   text-align: center;
 }
@@ -8,7 +14,7 @@
 }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+  .running {
     animation: App-logo-spin infinite 20s linear;
   }
 }
